# tuif

./: .gitignore  README.rst  constants.yaml  pyproject.toml
tests/: test_tuif.py
tuif/: constants.py
tuif/models/: __init__.py  __main__.py  border.py  canvas.py  color.py  constraints.py  frame.py  pixel.py  shape.py
